deploy/demo/kobs/base/kobs-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kobs
  labels:
    name: kobs
    istio-injection: enabled
