deploy/demo/kobs/base/kobs-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kobs-gateway
  namespace: kobs
  labels:
    app: kobs
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - kobs.demo
