deploy/demo/kobs/base/kobs-virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kobs
  namespace: kobs
  labels:
    app: kobs
spec:
  hosts:
    - kobs.demo
  gateways:
    - kobs-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: kobs.kobs.svc.cluster.local
            port:
              number: 15220
    - route:
        - destination:
            host: kobs.kobs.svc.cluster.local
            port:
              number: 15219
      timeout: 60s
